fix: content align

--- a/bookbrowser/src/app/adz.component.css
+++ b/bookbrowser/src/app/adz.component.css
@@ -1,5 +1,4 @@
-content {
-    width: 50%;
+.content {
     display: flex;
     justify-content: center;
 }
